tooling/nargo_cli/tests/snapshots/compile_failure/unsigned_integer_literal_underflow/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: The value `-1` cannot fit into `u8` which has range `0..=255`
  ┌─ src/main.nr:2:9
  │
2 │     foo(-1)
  │         --
  │
  = Call stack:
    1. src/main.nr:2:9

Aborting due to 1 previous error
