tooling/nargo_cli/tests/snapshots/compile_failure/unsigned_integer_literal_underflow/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The value `-1` cannot fit into `u8` which has range `0..=255`
  ┌─ src/main.nr:2:9
  │
2 │     foo(-1)
  │         --
  │
  = Call stack:
    1. src/main.nr:2:9

Aborting due to 1 previous error
